--- a/NodeServer/package.json
+++ b/NodeServer/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^10.3.1",
     "protobufjs": "^6.8.6",
     "ws": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/ws": "^5.1.1"
   }
 }
